# Discrete-Diffusion-Forcing

./: .gitignore  README.md  pyproject.toml  requirements.txt
D2F-eval/: compare_lladao_gui.py  demo_lladao_gui.py  diagnose_lladao_yarn.py  eval_lladao_gui.py
D2F-train/: train.py  train.sh  train_lladao_gui.py
D2F-train/config/: lladao_gui.yaml  lladao_gui_8gpu.yaml
D2F-train/utils/: loss.py  util.py  util_nomaskeos.py
D2F-train_dual_block/: test_loss_visualization.py
D2F-train_dual_block/config/: dream_eagle.yaml
D2F-train_dual_block/utils/: data.py  loss.py  model.py  util.py
d2f_vllm/: README.md  mllm_lladao_gui_long_context.sh  mllm_lladao_gui_nonpd.sh  mllm_lladao_gui_yarn_ab.sh  pyproject.toml
d2f_vllm/d2f_vllm/: __init__.py  config.py  fastdllm_engine.py  lladao_gui_engine.py  sampling_params.py
d2f_vllm/d2f_vllm/cli/: __init__.py  lladao_gui_nonpd.py
d2f_vllm/d2f_vllm/engine/: block_manager.py  llm_engine.py  model_runner.py  sequence.py
d2f_vllm/d2f_vllm/layers/: embed_head.py  layernorm.py  rotary_embedding.py  sampler.py
d2f_vllm/d2f_vllm/models/: auto_model.py  lladao_gui.py
lladao_d2f/: __init__.py  inference.py  masking.py  modeling.py  noise.py  training.py
scripts/: convert_lladao_gui_d2f_vllm.py  prepare_mllm_lladao_gui_data.sh  run_mllm_lladao_gui_pipeline.sh  train_mllm_lladao_gui_2gpu.sh  train_mllm_lladao_gui_8gpu.sh
tests/: test_convert_lladao_gui_d2f_vllm.py  test_d2f_vllm_loader.py  test_lladao_gui_engine.py  test_lladao_masking.py  test_lladao_modeling.py  test_lladao_noise.py  test_lladao_training.py
(+13 files in other folders)
